--- a/src/app/component1/component1.component.html
+++ b/src/app/component1/component1.component.html
@@ -1,45 +1,159 @@
-<div class="log">
-  <div class="container">
-    <div class="d-flex justify-content-center">
-      <div class="card">
-        <div class="card-header">
-                  <div class="logo-image">
-                      <img src="assets\Logo (2).png" alt ="Bootstrappin" class="img-fluid" >
-                  </div>
-        
+<!-- <nav class="navbar navbar-inverse navbar-expand-lg fixed-top"> -->
+  <div class="top-head">
+  <!-- <div class="container-fluid"> -->
+    <div class= "container-fluid">
+      <div class="row">
+      <div class="col-lg-3 col-xs-6 col-sm-6">
+          <div class="container">
+      <a class="navbar-brand" [routerLink] = "'Home'">
+        <div class="image" style="align-self: center;">
+            <img src="assets\collegelogo.jpeg" alt ="Bootstrappin" class="img-fluid" >
         </div>
-        <div class="card-body">
-          <form>
-            <div class="input-group form-group">
-              <div class="input-group-prepend">
-                <span class="input-group-text"><i class="fas fa-user"></i></span>
-              </div>
-              <input type="text" class="form-control" placeholder="username">
-              
-            </div>
-            <div class="input-group form-group">
-              <div class="input-group-prepend">
-                <span class="input-group-text"><i class="fas fa-key"></i></span>
-              </div>
-              <input type="password" class="form-control" placeholder="password">
-            </div>
-            <div class="row align-items-center remember">
-              <input type="checkbox">Remember Me
-            </div>
-            <div class="form-group">
-              <input type="submit" value="Login" class="btn float-right login_btn">
-            </div>
-          </form>
-        </div>
-        <div class="card-footer">
-          <div class="d-flex justify-content-center links">
-            Don't have an account?<a href="#">Sign Up</a>
+    </a>
           </div>
-          <div class="d-flex justify-content-center">
-            <a href="#">Forgot your password?</a>
-          </div>
+      </div>
+
+      <div class="col-lg-6 col-xs-6 col-sm-6">
+        <div class="container">
+          <h1>DAV Post Graduate College <mark class="blue">(Admitted to the privileges of BANARAS HINDU UNIVERSITY)</mark></h1>
+
         </div>
+    </div>
+
+    <div class="col-lg-3 col-xs-6 col-sm-6">
+      <div class="container">
+        <button mdbBtn type="button" color="amber" size="lg" rounded="true" mdbWavesEffect style="margin: 50px 60px" >Log In</button>
+      </div>
+  </div>
       </div>
     </div>
   </div>
+
+ 
+  <div style="background-color: rgb(243, 243, 243)">
+<mdb-carousel class="carousel slide carousel-fade"  [animation]="'fade'">
+  <mdb-carousel-item>
+    <div class="view w-100 h-80">
+      <img class="d-block w-100 " src="assets\maxresdefault.jpg" alt="First slide">
+      <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
+    </div>
+    <div class="carousel-caption">
+      <h1 class="h1-responsive" style="color: rgb(70, 69, 69);"></h1>
+      
+    </div>
+  </mdb-carousel-item>
+  <mdb-carousel-item>
+    <div class="view w-100">
+      <img class="d-block w-100" src="assets\carousel-banner.jpg" alt="Second slide">
+      <div class="mask rgba-black-strong waves-light" mdbWavesEffect></div>
+    </div>
+    <div class="carousel-caption">
+      <h1 class="h1-responsive">Made for Collaboration</h1>
+  
+    </div>
+  </mdb-carousel-item>
+  <!-- <mdb-carousel-item>
+    <div class="view w-100">
+      <img class="d-block w-100" src="assets\image10.jpg" alt="Third slide">
+      <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
+    </div>
+    <div class="carousel-caption">
+      <h1 class="h1-responsive">Global Connectivity</h1>
+      
+    </div>
+  </mdb-carousel-item> -->
+</mdb-carousel>
+</div>
+<!-- main body -->
+<div class="container-fluid" style="background-color: rgb(243, 243, 243)">
+  <h1 class= "solution">Welcome to DAV Post Graduate College Varansi</h1>
+<div class="row">
+  <div class="col-lg-3 col-xs-12 col-sm-12">
+      <div class="container">
+        <div class="screen">
+          <div class="logo-image">
+              <img src="assets\boardMessage_Ajit_Kumar_Singh202957337.jpg" alt ="Bootstrappin" class="img-fluid-1" >
+          </div>  
+          <h3 class="feature">Ajay Kumar Singh </h3>  
+      <p class= name>
+        Secretary/Manager
+      </p>
+      </div>
   </div>
+  </div>
+
+  <div class="col-lg-6 col-xs-12 col-sm-12" id="smbax">
+    <div class="container">
+    <div class="middle-box">
+        <!-- <div class="logo-image">
+            <img src="assets\Chat.png" alt ="Bootstrappin" class="img-fluid" >
+        </div>   -->
+        <!-- <h3 class="feature">Chat Enable</h3>   -->
+    <h2 class="about">About College</h2>
+        <ul>
+      DAV Post Graduate College was established by its mother institution, Arya Vidya Sabha, Kashi. The idea behind its establishment was to open an institution in the heart of the city and under the umbrella of Banaras Hindu University, to cater to the need of the value and skill based education to the students. Two disciples of Mahamana Pandit Madan Mohan Malviya Ji, viz. Pt. Ram Narayan Mishra and Shri Gauri Shankar Prasad were instrumental in establishing the college. 
+    </ul>
+<h2 class= "about">
+  Features
+</h2>
+<p class="feature">
+<ul class="a">
+  <li>Complete Digitalization of Teaching-Learning with Day/Night Lectures & Discussions with students on video-mobile conferencing.</li>
+<li>Digital Library</li>
+<li>Regular online MCQ tests for students apprending competitive examinations like Civil Services, Banking, Railways etc</li>
+<li>Digital interface of Class-room teaching and Student's feed-back.</li>
+</ul>
+
+    <!-- <div class="center">
+        <button type="button" class="btn btn-link btn-lg">Learn more</button>
+      </div> -->
+    </div>
+    </div>
+</div>
+
+  <div class="col-lg-3 col-xs-12 col-sm-12">
+    <div class="container">
+      <div class="screen">
+        <div class="logo-image">
+            <img src="assets\boardMessage_Principal203123002.jpg" alt ="Bootstrappin" class="img-fluid-1" >
+        </div>  
+        <h3 class="feature">Dr.Satya Dev Singh</h3>  
+    <p class= name>
+      Principal
+    </p>
+    </div>
+</div>
+  </div>
+</div>
+<!-- main body  -->
+
+
+ <!-- Footer -->
+<div class="page font-small  text-white-50 ">
+
+  <!-- Footer Elements -->
+  <div class="container-fluid">
+
+    <!-- Call to action -->
+    <ul class="list-unstyled list-inline text-center py-2">
+      <li class="list-inline-item">
+        <h5 class="mb-1">Join Us here</h5>
+      </li>
+      <li class="list-inline-item">
+        <a href="#!" class="btn btn-outline-amber btn-rounded">Log In!</a>
+      </li>
+       
+    </ul>
+    <!-- Call to action -->
+
+  </div>
+
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://camvision.tech/#/"> camvision.tech</a>
+  </div>
+  <!-- Copyright -->
+
+</div>
+<!-- Footer -->
