--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <body>
 <div>
   
-  <app-navbar></app-navbar>
+  <!-- <app-navbar></app-navbar> -->
   <!-- <app-dashboard></app-dashboard> -->
-   
+  <app-component1></app-component1> 
 </div>
 <router-outlet></router-outlet>
 
