--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -47,10 +47,15 @@ h1.solution{
 }
 
 .img-fluid{
- width: 20vh;
+ /* width: 20vh;
  height: auto;
-  max-height: auto;
+  max-height: auto; */
+  height: auto;
+  width: auto;
   
+  max-width: 20vh;
+
+
   position: relative;
   left: 50%;
   padding-top: 15vh;
@@ -72,14 +77,18 @@ h3.feature{
 
 p.feature{
   color: rgb(245, 240, 240);
-  font-size: 2.2vh; 
+  font-size: 2vh; 
  font-weight: 300;
   line-height: 2.7vh; 
  text-align: center;
+
+
  
 }
 .btn{
   color: aliceblue;
+  font-size: 2.2vh;
+  line-height: 2.7vh;
 
 }
 .center {
